# course_financial_applications

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/01_ Fintech_Toolbox/: 01_[notes]_default_LDA.ipynb  01_default_LDA.ipynb  03_fraud_detection_autoenc.ipynb  04_[wip]_autoenc_WIP.ipynb  04_[wip]_timeseries_whitenoise_rdmwalk.ipynb  05_[notes]_timeseries_whitenoise_rdmwalk.ipynb  06_[notes]_timeseries_arima.ipynb
notebooks/02_Financial_Objects/: 01_[notes]_timeseries_arch_garch.ipynb  01_[notes]_timeseries_arch_garch_lstm.ipynb  01_[notes]_timeseries_lstm_arch_garch.ipynb  02_[notes]_black_scholes_options_value.ipynb  03_[notes]_monte_carlo_options_value.ipynb  04_[notes]_markovitz_portfolio_management.ipynb  05_[notes]_HRP_portfolio_management.ipynb  05_[notes]_monte_carlo_options_value.ipynb  06_[notes]_markovitz_portfolio_management.ipynb  07_[notes]__portfolio_management.ipynb  08_[notes]_delta_hedging.ipynb  2_RL_Hedging.ipynb  CLA.py
notebooks/02_Financial_Objects_I/: 01_[notes]_timeseries_lstm_arch_garch.ipynb
notebooks/03_AI_&_Finance/: 02_[notes]_ReinformentLearn_Hedging.ipynb  03_[notes]_IntroNLP.ipynb  04_[notes]_FinBERT_LLM.ipynb  05_[notes]_VAR_Models.ipynb
notebooks/03_Financial_Objects_II/: 01_[notes]_delta_hedging.ipynb  02_[notes]_ReinformentLearn_Hedging.ipynb  03_[notes]_IntroNLP.ipynb  04_[notes]_FinBERT_LLM.ipynb  Q_RL_Hedging.npy  Sentences_AllAgree.txt
notebooks/Tests/: 01_test_module_I.ipynb  02_test_module_II_ParteI.ipynb  02_test_module_II_ParteII.ipynb  03_test_module_III.ipynb  03_test_module_III_CLF.ipynb  03_test_module_III_CLF_v2ipynb  (+2 more)
