[tool.poetry]
name = "course_financial_applications"
version = "1.0.0"
description = "Notes from a course in ML & AI in Finance"
authors = ["Julio Torreblanca <julio.avila.torreblanca@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.55"
tqdm = "^4.67.1"
cvxopt = "^1.3.2"
nbformat = "^5.10.4"




[tool.poetry.group.data.dependencies]
numpy = "^2.2.3"
pandas = "^2.2.3"

[tool.poetry.group.model.dependencies]
scikit-learn = "^1.6.1"

[tool.poetry.group.plots.dependencies]
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
plotly = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
